优化全局通知框